# mcp-example

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_publish_docker.yaml
app/: crud.py  main.py  models.py  schemas.py
src/: run.py
src/app/: database.py  main.py  models.py  sample_data.py  schemas.py
src/app/routes/: __init__.py  customer.py  order.py  product.py
src/docker/: Dockerfile  docker-compose.yaml
src/envs/: .env-compose.template  .env.template
